--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SpotDetailActivity"></activity>
+        <activity android:name=".SettingActivity"></activity>
+        <activity android:name=".SpotDetailActivity" />
         <activity android:name=".RouteMapActivity" />
         <activity android:name=".RouteChoiceSpotActivity" />
         <activity android:name=".RouteChoiceTimeActivity" />
@@ -25,7 +26,6 @@
         android:theme="@style/AppTheme"
         android:theme="@android:style/Theme.NoTitleBar"
         -->
-        <activity android:name=".EscapeActivity" />
         <activity android:name=".SpotActivity" />
         <activity android:name=".RouteChoiceActivity" />
         <activity android:name=".MainActivity">
